# AA_CV_Automation

./: .gitignore  README.md  app_ui.py  config_loader.py  config_manager.py  config_manager.py.bak  device_controller.py  device_lifecycle.py  device_manager.py  error_handler.py  main.py  main_copy.py  main_new.py  main_old_copy.py  measurement_automation_models.py  measurement_file_service.py  measurement_prestart_automation.py  measurement_service.py  measurement_start_dialog.py  measurement_workflow.py  pyproject.toml  requirements.txt  runtime_state.py  selection_manager.py  selection_manager.py.bak  settings.json  stationkit_measurement_controller.py  system_actions.py  ui_utils.py  update_config.py
arduino_firmware/: arduino_firmware.ino
arduino_firmware/backup/: arduino_firmware_broken_20260428_162210.ino
mock/: mock_hoktnet.py
tests_arduino/pca9685_relay_safe/: pca9685_relay_safe.ino
tests_arduino/pca9685_servo_sweep/: pca9685_servo_sweep.ino
tests_pyautogui/: save.py  test_run.py  window_top.py
