[project]
name = "aa-cv-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyautogui>=0.9.54",
    "pyperclip>=1.11.0",
    "pyserial>=3.5",
    "pywin32>=311",
    "stationkit @ file:///c:/Users/tkm-a/Downloads/stationkit-main/stationkit-main",
]
